welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:77: error: expected start of definition
override def run() {
         ^MethodsPicture:81: error: Unmatched closing brace '}' ignored here
}
^